@@ -1,5 +1,9 @@
+include $(top_srcdir)/Makefile.decl
+
 SUBDIRS = protocol engine server demos
 
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 compile config.guess config.sub \
 		       configure depcomp install-sh ltmain.sh missing \
 		       mkinstalldirs
+
+EXTRA_DIST+=Makefile.decl
